--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- Fuente personalizada desde Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Meow+Script&display=swap" rel="stylesheet">
     <!-- Vincular la hoja de estilos personalizada -->
-    <link rel="stylesheet" href="/Estilo/style.css">
-    <link rel="icon" href="/Imagenes/crochet.png">
+    <link rel="stylesheet" href="Estilo/style.css">
+    <link rel="icon" href="Imagenes/crochet.png">
 </head>
 
 <body>
