--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Sección de bienvenida centrada -->
     <section class="welcome-section">
-        <img class="welcome-image" src="../Imagenes/pexels-surene-palvie-1075224-2399125.jpg" alt="Imagen de fondo">
+        <img class="welcome-image" src="Imagenes/pexels-surene-palvie-1075224-2399125.jpg" alt="Imagen de fondo">
         <div class="welcome-text">
             <p>Bienvenidos a <b>Croche Kurumi</b>, donde cada puntada cuenta una historia. Descubre piezas hechas a mano con amor, creatividad y dedicación.</p>
         </div>
@@ -50,16 +50,16 @@
             </div>
 
         </div>
-        <img class="about-image" src="../Imagenes/Imagen-del-producto.jpg" alt="Imagen del producto">
+        <img class="about-image" src="Imagenes/Imagen-del-producto.jpg" alt="Imagen del producto">
     </section>
 
     <!-- Pie de página con redes sociales -->
     <footer class="footer">
         <p>Síguenos en nuestras redes sociales</p>
         <nav class="social-links">
-            <a href="#"><img src="../Imagenes/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="../Imagenes/twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="../Imagenes/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="Imagenes/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="Imagenes/twitter.png" alt="Twitter"></a>
+            <a href="#"><img src="Imagenes/instagram.png" alt="Instagram"></a>
         </nav>
         <p>&copy; 2023 Hilos de Kurumi - Todos los derechos reservados</p>
     </footer>
