--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
             <li class="nav-into">
                 <a href="index.html">Inicio</a>
-                <a href="/views/producto.html">Galería</a>
+                <a href="views/producto.html">Galería</a>
                 <a href="presupuesto.html">Presupuesto</a>
                 <a href="contacto.html">Contacto</a>      
             </li>
