--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <li class="nav-into">
                 <a href="index.html">Inicio</a>
                 <a href="views/producto.html">Galería</a>
-                <a href="presupuesto.html">Presupuesto</a>
-                <a href="contacto.html">Contacto</a>      
+                <a href="views/presupuesto.html">Presupuesto</a>
+                <a href="views/contacto.html">Contacto</a>      
             </li>
         </ul>
     </nav>
@@ -46,7 +46,7 @@
             <p>En Hilos de Kurumi, somos un equipo apasionado por el crochet. Cada pieza que creamos está hecha a mano con dedicación y amor, buscando ofrecer a nuestros clientes no solo productos, sino también una experiencia única. Nuestro objetivo es transformar cada puntada en una obra de arte que haga sentir a nuestros clientes especiales.</p>
             
             <div class="container-button">
-                <a href="producto.html" class="cta-button">Nuestros productos</a>
+                <a href="views/producto.html" class="cta-button">Nuestros productos</a>
             </div>
 
         </div>
