--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="nav-index">
         <ul>
             <li class="nav-into">
-                <a href="index.html">Inicio</a>
+                <a href="index.html" class="active">Inicio</a>
                 <a href="views/producto.html">Galería</a>
                 <a href="views/presupuesto.html">Presupuesto</a>
                 <a href="views/contacto.html">Contacto</a>      
